2011-07-01  Jeremy Cribb <jcribb@email.unc.edu>
	* CellProcessingScript.m:  added Anya's edit for correctly parsing new "_tracked" filenames.

2011-07-01  Jeremy Cribb <jcribb@email.unc.edu>
	* CellProcessingScript.m:  Now uses the newer method for determining which window sizes to use when calculating the MSD on input data.

2011-04-19  Jeremy Cribb <jcribb@email.unc.edu>
	* CellProcessingScript.m:  Adds both plots to the output and saves the figures as Matlab .fig files as well as .png files.

2011-04-14  Jeremy Cribb <jcribb@email.unc.edu>
	* CellProcessingScript.m:  added.  Processes Cell Diffusion experiments for Panoptes.

2011-04-13  Jeremy Cribb <jcribb@email.unc.edu>

	* pan_mucus_rheo_run.m: added.  moved from 3dfmAnalysis/specific/rheology.  This is panoptes rheology analysis code in its early stages.  specific for mucus samples.


2011-04-13  Jeremy Cribb <jcribb@email.unc.edu>

	* Initial Version of 'Panoptes' subfolder.


