@@ -1,0 +1,6 @@
+% pan_CellProcessingScript
+%Wrapper for CellProcessingScript that runs the CellProcessingScript and
+%exits for use inside PanopticNerve.
+
+CellProcessingScript;
+exit;
