@@ -1,3 +1,6 @@
+2011-07-06  Anya Derbakova <anya@cs.unc.edu>
+        * pan_CellProcessingScript:  added. Runs CellProcessingScript.m and exits Matlab.
+
 2011-07-01  Jeremy Cribb <jcribb@email.unc.edu>
 	* CellProcessingScript.m:  added Anya's edit for correctly parsing new "_tracked" filenames.
 
